--- a/style.css
+++ b/style.css
@@ -10,43 +10,13 @@ body {
     align-items: center;
 }
 
-.game-container {
-    position: relative;
-    height: 480px;
-    width: 480px;
 
-    background-color: lightcyan;
-    border-radius: 2px;
+
+canvas {
+    border: 1px solid rgb(128, 156, 156);
     box-shadow: 
     0.4px 0.3px 0.4px hsl(var(--shadow-color) / 0.97),
     1.3px 1.2px 1.3px -1.7px hsl(var(--shadow-color) / 0.73),
     7.9px 7.5px 8.2px -3.3px hsl(var(--shadow-color) / 0.48),
     25.7px 24.6px 26.7px -5px hsl(var(--shadow-color) / 0.24);
-
-    background-image: url("boxes.svg");
-    background-size: 20px;
-}
-
-.snake-cube {
-    position: absolute;
-
-    height: 20px;
-    width: 60px;
-    top: 20px;
-    left: 40px;
-
-    background-color: #73d32b;
-    background-image: url("boxes.svg");
-    background-size: 20px;
-}
-
-.apple {
-    position: absolute;
-
-    height: 20px;
-    padding: 1px;
-    top: 100px;
-    left: 200px;
-
-    padding-top: 0px;
 }
