added functionallity to game over button

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ canvas {
 
 .gameover-cont {
     position: absolute;
-    background-color: #d2f473;
+    background-color: #1a6127;
 
     height: 240px;
     width: 240px;
