--- a/style.css
+++ b/style.css
@@ -18,29 +18,107 @@ h1 {
     font-family: 'QuickSand';
     font-weight: 450;
     font-size: 40px;
+
     margin-top: 20px;
     margin-bottom: 20px;
+
+    text-shadow: 0 0 0.5em #32c1ff;
 }
 
 
 
 canvas {
     border: 1px solid #8c0082;
+    border-radius: 5px;
 }
 
 .gameover-cont {
     position: absolute;
-    background-color: #1a6127;
+    background-color: rgba(155, 120, 170, 0.578);
+    border-radius: 15px;
 
     height: 240px;
     width: 240px;
-    top: 200px;
+    top: 208px;
 
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 50px;
+
+    box-shadow: 0px 0px 8px rgb(205, 156, 227);
+}
+
+.gameover-cont:hover {
+    box-shadow: 0px 0px 15px rgb(233, 184, 255);
+}
+
+.suck-text {
+    font-family: 'QuickSand';
+    font-weight: 800;
+    font-size: 25px;
+
+    --glow-color: rgb(176, 252, 255);
+    color: var(--glow-color);
+    text-shadow: 0 0 0.5em var(--glow-color);
 }
 
 .gameover-button {
-    
+    font-family: 'QuickSand';
+
+    width: 150px;
+    height: 40px;
 }
+
+/* From Uiverse.io by InfinityLoopGames */ 
+.glowbutton {
+    --glow-color: rgb(176, 252, 255);
+    --glow-spread-color: rgba(123, 251, 255, 0.781);
+    --enhanced-glow-color: rgb(206, 255, 255);
+    --btn-color: rgb(61, 127, 136);
+    border: 0.25em solid var(--glow-color);
+    padding: 0.5em 3em;
+    color: var(--glow-color);
+    font-size: 12px;
+    font-weight: bold;
+    background-color: var(--btn-color);
+    border-radius: 1em;
+    outline: none;
+    box-shadow: 0 0 1em 0.25em var(--glow-color),
+      0 0 4em 1em var(--glow-spread-color),
+      inset 0 0 0.75em 0.25em var(--glow-color);
+    text-shadow: 0 0 0.5em var(--glow-color);
+    position: relative;
+    transition: all 0.3s;
+    transition: visibility 0s;
+}
+  
+/* .glowbutton::after {
+    pointer-events: none;
+    content: "";
+    position: absolute;
+    top: 120%;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--glow-spread-color);
+    filter: blur(2em);
+    opacity: 0.7;
+    transform: perspective(1.5em) rotateX(35deg) scale(1, 0.6);
+} */
+  
+.glowbutton:hover {
+    color: var(--btn-color);
+    background-color: var(--glow-color);
+    box-shadow: 0 0 1em 0.25em var(--glow-color),
+      0 0 4em 2em var(--glow-spread-color),
+      inset 0 0 0.75em 0.25em var(--glow-color);
+}
+  
+.glowbutton:active {
+    box-shadow: 0 0 0.6em 0.25em var(--glow-color),
+      0 0 2.5em 2em var(--glow-spread-color),
+      inset 0 0 0.5em 0.25em var(--glow-color);
+}
+  
