--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ canvas {
     box-shadow: 0px 0px 8px rgb(205, 156, 227);
 }
 
-.child {
+.grandchild, .child {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -170,4 +170,97 @@ canvas {
     100% {
       transform: rotate(360deg);
     }
+}
+
+.background-size {
+    -webkit-appearance: none;
+    width: 100px;
+
+    width: 100%;
+    height: 3px;
+    border-radius: 5px;
+    background: #D5DBE1;
+    outline: none;
+    opacity: 0.9;
+    cursor: pointer;
+}
+
+.background-size::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background: rgb(123, 251, 255);
+    height: 10px;
+    width: 10px;
+
+    border-radius: 50%;
+}
+
+.background-size::-webkit-slider-thumb:hover {
+    box-shadow: 0px 0px 2px 6px rgba(123, 251, 255, 0.407);
+}
+
+
+.background-size-cont {
+    display: grid;
+    grid-template-columns: 60px 1fr;
+    align-items: center;
+    --glow-color: rgb(176, 252, 255);
+    color: var(--glow-color);
+    text-shadow: 0 0 0.5em var(--glow-color);
+
+    font-size: 12px;
+    gap: 18px;
+
+}
+
+.background-size-cont div {
+    width: 70px;
+}
+
+.obstacles-label {
+    display: flex;
+    justify-self: center;
+    position: relative;
+
+    height: 18px;
+    width: 40px;
+}
+
+.obstacles {
+    position: absolute;
+    display: none;
+}
+
+.slider {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+
+    transition: all 0.3s ease-in-out;
+    background-color: rgb(0, 251, 255);
+}
+
+.slider::before {
+    content: "";
+    position: absolute;
+    background-color: rgb(26, 255, 0);
+
+    box-shadow: 0px 0px 2px rgb(0, 97, 99);
+    border-radius: 50%;
+
+    width: 13px;
+    height: 13px;
+    top: 0.15rem;
+    left: 2px;
+
+    transition: all 0.3s;
+}
+
+.obstacles:checked ~ .slider::before {
+    transform: translateX(22px);
+    background-color: rgb(255, 0, 0);
+}
+
+.obstacles:checked ~ .slider {
+    background-color: #5a007e;
 }
