added rendering Objects

--- a/style/lostPage.css
+++ b/style/lostPage.css
@@ -28,7 +28,7 @@
 }
 
 /* shinning blue texts */
-.suck-text {
+.start-text {
     font-family: 'QuickSand';
     font-weight: 800;
     font-size: 25px;
